Add some images and descriptions to main page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,17 +2,36 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Shengjing Zhang's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Shengjing Zhang's Portfolio</h1>
+      <p>Welcome to my portfolio</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
+      <p>My name is Shengjing.</p>
+      <img src="images/selfie.jpg"/>
+
+      <p>I am a Year 3 student at NTU. My major is Computer Science.</p>
+
+      <p>I come from Nanjing, a beautiful city in China.</p>
+      <img src="images/Nanjing.jpg"/>
+
+      <p>I am a big fan of detective stories.</p>
+      <p>My favorite TV show is Sherlock, from BBC.</p>
+      <img src="images/sherlock.jpg"/>
+
+      <P> My favorite movie is Batman by Christopher Nolan. Christopher is a genius! I've watched every movie of his.</p>
+      <img src="images/batman.jpg"/>
+
+      <p>I like Game of Thrones too although the final season is not very good.</p>
+      <img src="images/GOT.jpg"/>
+
+      <p>Thank you for your watching! I will add more details about me in the future!</p>
     </div>
   </body>
 </html>
