--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,8 +11,9 @@
       <h1>Shengjing Zhang's Portfolio</h1>
       <p>Welcome to my portfolio</p>
       <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <button onclick="getRandomQuoteUsingArrowFunctions()">Fetch a quote!</button>
+      <div id="quote-container"></div>
+
       <p>My name is Shengjing.</p>
       <img src="images/selfie.jpg"/>
 
