--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,6 +23,23 @@
         <input type="submit" />
       </form>
 
+      <p>Type a message and select a language, then click submit to translate it.</p>
+
+      <textarea id="text"></textarea>
+
+      <select id="language">
+        <option value="es">English</option>
+        <option value="zh">Chinese</option>
+        <option value="es">Spanish</option>
+        <option value="hi">Hindi</option>
+        <option value="ar">Arabic</option>
+      </select>
+
+      <button onclick="requestTranslation();">Translate</button>
+
+      <hr/>
+      <div id="result"></div>
+
       <p>My name is Shengjing.</p>
       <img src="images/selfie.jpg"/>
 
